# arxiv-daily

./: .env.example  .gitignore  Dockerfile  README.md  README_en.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: backend.yml  frontend.yml
app/: config.py  database.py  main.py
app/api/: __init__.py  articles.py  auth.py  likes.py  preferences.py  recommendations.py  zotero.py
app/models/: __init__.py  article.py  pipeline_log.py  recommendation.py  user.py
app/schemas/: __init__.py  article.py  recommendation.py  user.py
app/services/: __init__.py  embedding_service.py  recommendation_service.py  zotero_parser.py
app/utils/: __init__.py  security.py
frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/articles/: ArticleCard.vue  ArticleDetail.vue
frontend/src/components/common/: LikeButton.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue
frontend/src/components/recommendations/: RecommendSection.vue
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/styles/: main.css
frontend/src/views/: HomeView.vue  LikesView.vue  LoginView.vue  RegisterView.vue  SettingsView.vue  SystemView.vue
migrations/: alembic.ini  env.py  script.py.mako
scripts/: init_db.py
