[project]
name = "arxiv-daily"
version = "2.0.0"
description = "Daily crawl arXiv papers with AI enhancement and personalized recommendations"
authors = [
    {name = "Jia Lin", email = "linj0866@126.com"},
    {name = "Wei Deng", email = "dw-dengwei@outlook.com"},
    {name = "Jian Guan", email = "jianguanthu@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
